--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=2.1.3",
     "scipy>=1.14.1",
     "matplotlib>=3.9.3",
+    "pyqt6>=6.7.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
